cambios realizados, test con mockito y utilización del javadoc