@@ -9,12 +9,14 @@ import viewnext.practica5.batch.config.writer.DistritoWriter;
 import viewnext.practica5.model.Distrito;
 import viewnext.practica5.repository.DistritoRepository;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
+/**
+ * The type Distrito writer test.
+ */
 class DistritoWriterTest {
 
     @Mock
@@ -23,16 +25,19 @@ class DistritoWriterTest {
     @InjectMocks
     private DistritoWriter distritoWriter;
 
+    /**
+     * Sets up.
+     */
     @BeforeEach
     void setUp() {
-        // Inicializa los mocks utilizando la anotación @Mock
         MockitoAnnotations.openMocks(this);
-
     }
 
+    /**
+     * Test write.
+     */
     @Test
     void testWrite() {
-        // Crea dos instancias de la entidad Distrito
         Distrito distrito1 = new Distrito();
         distrito1.setId(1);
         distrito1.setNombreDistrito("Distrito 1");
@@ -43,15 +48,10 @@ class DistritoWriterTest {
         distrito2.setNombreDistrito("Distrito 2");
         distrito2.setNumeroViviendas(200);
 
-        // Crea una lista con los dos distritos
-        List<Distrito> distritos = Arrays.asList(distrito1, distrito2);
+        List<Distrito> distritos = List.of(distrito1, distrito2);
 
-        // Llama al método write del escritor bajo prueba
         distritoWriter.write(distritos);
 
-        // Verifica que el método saveAll del repositorio mock se llamó exactamente una vez
-        // con la lista de distritos proporcionada al método write
         verify(distritoRepository, times(1)).saveAll(distritos);
-
     }
 }
